Add flaky test detection by running modified test suites multiple times
- Update Makefile:
  - Create `collect-modified-tests` target to gather modified test suites per category.
  - Modify test targets to accept `TEST_SUITES` and `N_RUNS` variables.
  - Run modified test suites multiple times using `go test -count=$(N_RUNS)` to detect flaky tests.

- Update GitHub Actions workflows:
  - Update `set-up-single-test` job to collect modified test suites and pass them to test jobs.
  - Adjust test jobs to run modified test suites multiple times per category.
  - Optimize test execution by running tests once per category with all modified suites.

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -441,7 +441,7 @@ jobs:
         timeout-minutes: 30
         run: make functional-test-xdc-coverage
 
-      - name: Run Modified Functional XDC Tests Multiple Times
+      - name: Flaky Functional XDC Test Detection
         if: ${{ env.MODIFIED_TEST_SUITES != '' }}
         timeout-minutes: 60
         env:
