--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -100,6 +100,29 @@ jobs:
         run: |
           cat "$GITHUB_OUTPUT"
 
+  pre-build:
+    name: Pre-build for cache
+    strategy:
+      fail-fast: false
+      matrix:
+        runs-on: [ubuntu-20.04]
+    runs-on: ${{ matrix.runs-on }}
+    steps:
+      - uses: actions/checkout@v4
+        if: ${{ !inputs.run_single_functional_test && !inputs.run_single_unit_test }}
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          ref: ${{ env.COMMIT }}
+
+      - uses: actions/setup-go@v5
+        if: ${{ !inputs.run_single_functional_test && !inputs.run_single_unit_test }}
+        with:
+          go-version-file: "go.mod"
+          check-latest: true
+
+      - run: make pre-build-functional-test-coverage
+        if: ${{ !inputs.run_single_functional_test && !inputs.run_single_unit_test }}
+
   misc-checks:
     name: Misc checks
     strategy:
@@ -134,13 +157,10 @@ jobs:
       - run: make clean-bins ci-build-misc
         if: ${{ !inputs.run_single_functional_test && !inputs.run_single_unit_test }}
 
-      - run: make build-tests
-        if: ${{ !inputs.run_single_functional_test && !inputs.run_single_unit_test }}
-
   unit-test:
     if: ${{ inputs.run_single_functional_test != true }}
     name: Unit test
-    needs: [misc-checks, set-up-single-test]
+    needs: [pre-build, set-up-single-test]
     strategy:
       fail-fast: false
       matrix:
@@ -180,7 +200,7 @@ jobs:
   integration-test:
     if: ${{ inputs.run_single_functional_test != true && inputs.run_single_unit_test != true }}
     name: Integration test
-    needs: misc-checks
+    needs: pre-build
     strategy:
       fail-fast: false
       matrix:
@@ -225,7 +245,7 @@ jobs:
   functional-test:
     if: ${{ inputs.run_single_unit_test != true }}
     name: Functional test
-    needs: [misc-checks, set-up-single-test]
+    needs: [pre-build, set-up-single-test]
     strategy:
       fail-fast: false
       matrix:
@@ -314,7 +334,7 @@ jobs:
   functional-test-xdc:
     if: ${{ inputs.run_single_functional_test != true && inputs.run_single_unit_test != true }}
     name: Functional test xdc
-    needs: misc-checks
+    needs: pre-build
     strategy:
       fail-fast: false
       matrix:
@@ -382,7 +402,7 @@ jobs:
   functional-test-ndc:
     if: ${{ inputs.run_single_functional_test != true && inputs.run_single_unit_test != true }}
     name: Functional test ndc
-    needs: misc-checks
+    needs: pre-build
     strategy:
       fail-fast: false
       matrix:
