--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -132,7 +132,7 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: ~/.cache/go-build
-          key: go-${{ runner.os }}-build-${{ github.sha }}
+          key: go-${{ runner.os }}-build-${{ env.COMMIT }}
 
       - run: make pre-build-functional-test-coverage
         if: ${{ !inputs.run_single_functional_test && !inputs.run_single_unit_test }}
@@ -182,7 +182,7 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: ~/.cache/go-build
-          key: go-${{ runner.os }}-build-${{ github.sha }}
+          key: go-${{ runner.os }}-build-${{ env.COMMIT }}
 
       - uses: arduino/setup-protoc@v3
         if: ${{ !inputs.run_single_functional_test && !inputs.run_single_unit_test }}
@@ -232,7 +232,7 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: ~/.cache/go-build
-          key: go-${{ runner.os }}-build-${{ github.sha }}
+          key: go-${{ runner.os }}-build-${{ env.COMMIT }}
 
       - name: Run unit tests
         if: ${{ !cancelled() && !inputs.run_single_unit_test }}
@@ -280,7 +280,7 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: ~/.cache/go-build
-          key: go-${{ runner.os }}-build-${{ github.sha }}
+          key: go-${{ runner.os }}-build-${{ env.COMMIT }}
 
       - name: Start containerized dependencies
         uses: hoverkraft-tech/compose-action@v2.0.1
@@ -387,7 +387,7 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: ~/.cache/go-build
-          key: go-${{ runner.os }}-build-${{ github.sha }}
+          key: go-${{ runner.os }}-build-${{ env.COMMIT }}
 
       - name: Start containerized dependencies
         if: ${{ toJson(matrix.containers) != '[]' && (inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
@@ -468,7 +468,7 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: ~/.cache/go-build
-          key: go-${{ runner.os }}-build-${{ github.sha }}
+          key: go-${{ runner.os }}-build-${{ env.COMMIT }}
 
       - name: Start containerized dependencies
         if: ${{ toJson(matrix.containers) != '[]' }}
@@ -549,7 +549,7 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: ~/.cache/go-build
-          key: go-${{ runner.os }}-build-${{ github.sha }}
+          key: go-${{ runner.os }}-build-${{ env.COMMIT }}
 
       - name: Start containerized dependencies
         if: ${{ toJson(matrix.containers) != '[]' }}
