Add flaky test detection by running modified test suites multiple times
- Create `find_altered_tests.go` to gather modified test suites per category.

- Update Makefile:
  - Modify test targets to accept `TEST_ARGS` where it was omitted
  - Run modified test suites multiple times using `go test -count=$(N_RUNS)` to detect flaky tests.

- Update GitHub Actions workflows:
  - Update `set-up-single-test` job to collect modified test suites and pass them to test jobs.
  - Adjust test jobs to run modified test suites multiple times per category.
  - Optimize test execution by running tests once per category with all modified suites.

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -25,10 +25,6 @@ on:
         description: "[Unit Test Only] Directory to run unit tests in"
         type: string
         default: "./temporal"
-      n_runs:
-        description: "Number of times to repeat the single test per database type"
-        type: number
-        default: 1
       test_name:
         description: "Name of the test to run (i.e. 'TestAcquireShard_DeadlineExceededErrorSuite' or 'TestFunctionalSuite/TestUpdateWorkflow')"
         type: string
@@ -187,7 +183,6 @@ jobs:
       UNIT_TEST_DIR: ${{ inputs.unit_test_directory }}
       TEST_TIMEOUT: ${{ needs.set-up-single-test.outputs.test_timeout }}
       RUN_SINGLE_UNIT_TEST: ${{ inputs.run_single_unit_test }}
-      MODIFIED_TEST_SUITES: ${{ needs.set-up-single-test.outputs.modified_unit_test_suites }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -212,11 +207,9 @@ jobs:
       - name: Flaky Unit Test Detection
         if: ${{ !cancelled() && !inputs.run_single_unit_test && env.MODIFIED_TEST_SUITES != '' }}
         timeout-minutes: 30
-        env:
-          FLAKY_TEST_ITERATIONS: 10
         run: |
-          echo "Detecting flaky unit tests: $MODIFIED_TEST_SUITES"
-          make unit-test-coverage TEST_SUITES="$MODIFIED_TEST_SUITES" N_RUNS="$FLAKY_TEST_ITERATIONS"
+          echo "Detecting flaky unit tests: ${{ needs.set-up-single-test.outputs.modified_unit_test_suites }}"
+          make unit-test TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_unit_test_suites }} -count=10"
 
       - name: Upload test results
         if: ${{ !cancelled() }}
@@ -233,7 +226,6 @@ jobs:
     runs-on: ${{ matrix.runs-on }}
     env:
       BUILDKITE_MESSAGE: '{"job": "integration-test"}'
-      MODIFIED_TEST_SUITES: ${{ needs.set-up-single-test.outputs.modified_integration_test_suites }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -262,12 +254,9 @@ jobs:
       - name: Flaky Integration Test Detection
         if: ${{ env.MODIFIED_TEST_SUITES != '' }}
         timeout-minutes: 30
-        env:
-          FLAKY_TEST_ITERATIONS: 5
         run: |
-          echo "Detecting flaky integration tests: $MODIFIED_TEST_SUITES"
-          make integration-test-coverage TEST_SUITES="$MODIFIED_TEST_SUITES" N_RUNS="$FLAKY_TEST_ITERATIONS"
-
+          echo "Detecting flaky integration tests: ${{ needs.set-up-single-test.outputs.modified_integration_test_suites }}"
+          make integration-test-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_integration_test_suites }} -count=5"
       - name: Upload test results
         if: ${{ !cancelled() }}
         run: make upload-test-results
@@ -329,7 +318,6 @@ jobs:
       SINGLE_TEST_ARGS: ${{ needs.set-up-single-test.outputs.single_test_args }}
       TEST_TIMEOUT: ${{ needs.set-up-single-test.outputs.test_timeout }}
       BUILDKITE_MESSAGE: '{"job": "functional-test", "db": "${{ matrix.persistence_driver }}"}'
-      MODIFIED_TEST_SUITES: ${{ needs.set-up-single-test.outputs.modified_functional_test_suites }}
     steps:
       - name: Print functional test
         run: echo "${{ needs.set-up-single-test.outputs.dbs }}" && echo "$SINGLE_TEST_ARGS"
@@ -366,11 +354,9 @@ jobs:
       - name: Flaky Functional Test Detection
         if: ${{ (env.MODIFIED_TEST_SUITES != '') && (inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
         timeout-minutes: ${{ fromJSON(needs.set-up-single-test.outputs.github_timeout) }} # make sure this is larger than the test timeout in the Makefile
-        env:
-          FLAKY_TEST_ITERATIONS: 5
         run: |
-          echo "Detecting flaky functional tests: $MODIFIED_TEST_SUITES"
-          make functional-test-coverage TEST_SUITES="$MODIFIED_TEST_SUITES" N_RUNS="$FLAKY_TEST_ITERATIONS"
+          echo "Detecting flaky functional tests: ${{ needs.set-up-single-test.outputs.modified_integration_test_suites }}"
+          make functional-test-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_test_suites }} -count=5"
 
       - name: Upload test results
         if: ${{ !cancelled() && (inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
@@ -416,7 +402,6 @@ jobs:
       PERSISTENCE_TYPE: ${{ matrix.persistence_type }}
       PERSISTENCE_DRIVER: ${{ matrix.persistence_driver }}
       BUILDKITE_MESSAGE: '{"job": "functional-test-xdc", "db": "${{ matrix.persistence_driver }}"}'
-      MODIFIED_TEST_SUITES: ${{ needs.set-up-single-test.outputs.modified_functional_xdc_test_suites }}
       TEST_PARALLEL_FLAGS: ${{ matrix.parallel_flags }}
     steps:
       - uses: actions/checkout@v4
@@ -444,11 +429,9 @@ jobs:
       - name: Flaky Functional XDC Test Detection
         if: ${{ env.MODIFIED_TEST_SUITES != '' }}
         timeout-minutes: 60
-        env:
-          FLAKY_TEST_ITERATIONS: 5
         run: |
-          echo "Detecting flaky functional xdc tests: $MODIFIED_TEST_SUITES"
-          make functional-test-xdc-coverage TEST_SUITES="$MODIFIED_TEST_SUITES" N_RUNS="$FLAKY_TEST_ITERATIONS"
+          echo "Detecting flaky functional xdc tests: ${{ needs.set-up-single-test.outputs.modified_functional_xdc_test_suites }}"
+          make functional-test-xdc-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_xdc_test_suites }} -count=5"
 
       - name: Upload test results
         if: ${{ !cancelled() }}
@@ -496,7 +479,6 @@ jobs:
       PERSISTENCE_TYPE: ${{ matrix.persistence_type }}
       PERSISTENCE_DRIVER: ${{ matrix.persistence_driver }}
       ES_VERSION: ${{ matrix.es_version }}
-      MODIFIED_TEST_SUITES: ${{ needs.set-up-single-test.outputs.modified_functional_ndc_test_suites }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -523,11 +505,9 @@ jobs:
       - name: Flaky Functional NDC Test Detection
         if: ${{ env.MODIFIED_TEST_SUITES != '' }}
         timeout-minutes: 30
-        env:
-          FLAKY_TEST_ITERATIONS: 5
         run: |
-          echo "Detecting flaky functional ndc tests: $MODIFIED_TEST_SUITES"
-          make functional-test-ndc-coverage TEST_SUITES="$MODIFIED_TEST_SUITES" N_RUNS="$FLAKY_TEST_ITERATIONS"
+          echo "Detecting flaky functional ndc tests: ${{ needs.set-up-single-test.outputs.modified_functional_ndc_test_suites }}"
+          make functional-test-ndc-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_ndc_test_suites }} -count=5"
 
   test-status:
     if: always()
