--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -74,6 +74,11 @@ jobs:
       single_test_args: ${{ steps.generate_output.outputs.single_test_args }}
       runs_on: ${{ steps.generate_output.outputs.runs_on }}
       dbs: ${{ inputs.test_dbs }}
+      modified_unit_test_suites: ${{ env.modified_unit_test_suites }}
+      modified_integration_test_suites: ${{ env.modified_integration_test_suites }}
+      modified_functional_test_suites: ${{ env.modified_functional_test_suites }}
+      modified_functional_ndc_test_suites: ${{ env.modified_functional_ndc_test_suites }}
+      modified_functional_xdc_test_suites: ${{ env.modified_functional_xdc_test_suites }}
     steps:
       - id: generate_output
         run: |
@@ -99,6 +104,36 @@ jobs:
       - id: cat_output
         run: |
           cat "$GITHUB_OUTPUT"
+
+      - name: Checkout Code
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          ref: ${{ env.COMMIT }}
+          fetch-depth: 0
+
+      - name: Fetch base branch
+        run: git fetch origin ${{ github.event.pull_request.base.ref }}:${{ github.event.pull_request.base.ref }}
+
+      - name: Compute merge base
+        run: |
+          MERGE_BASE="$(git merge-base "${{ env.COMMIT }}" "${{ github.event.pull_request.base.ref }}")"
+          echo "MERGE_BASE=${MERGE_BASE}" >> "$GITHUB_ENV"
+
+      - name: Collect Modified Tests
+        id: collect_modified_tests
+        run: |
+          set -exuo pipefail
+
+          go run ./cmd/tools/test/find_altered_tests.go \
+            -c unit \
+            -c integration \
+            -c functional \
+            -c functional_ndc \
+            -c functional_xdc \
+            -s "${MERGE_BASE}" \
+            -t "${COMMIT}" | tee -a "$GITHUB_ENV"
+        shell: bash
 
   misc-checks:
     name: Misc checks
@@ -173,6 +208,13 @@ jobs:
         timeout-minutes: 15
         run: UNIT_TEST_DIRS=$UNIT_TEST_DIR make unit-test-coverage
 
+      - name: Flaky Unit Test Detection
+        if: ${{ !cancelled() && !inputs.run_single_unit_test && env.MODIFIED_TEST_SUITES != '' }}
+        timeout-minutes: 30
+        run: |
+          echo "Detecting flaky unit tests: ${{ needs.set-up-single-test.outputs.modified_unit_test_suites }}"
+          make unit-test TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_unit_test_suites }} -count=10"
+
       - name: Upload test results
         if: ${{ !cancelled() }}
         run: make upload-test-results
@@ -180,7 +222,7 @@ jobs:
   integration-test:
     if: ${{ inputs.run_single_functional_test != true && inputs.run_single_unit_test != true }}
     name: Integration test
-    needs: misc-checks
+    needs: [misc-checks, set-up-single-test]
     strategy:
       fail-fast: false
       matrix:
@@ -213,6 +255,12 @@ jobs:
         timeout-minutes: 15
         run: make integration-test-coverage
 
+      - name: Flaky Integration Test Detection
+        if: ${{ env.MODIFIED_TEST_SUITES != '' }}
+        timeout-minutes: 30
+        run: |
+          echo "Detecting flaky integration tests: ${{ needs.set-up-single-test.outputs.modified_integration_test_suites }}"
+          make integration-test-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_integration_test_suites }} -count=5"
       - name: Upload test results
         if: ${{ !cancelled() }}
         run: make upload-test-results
@@ -307,6 +355,13 @@ jobs:
         timeout-minutes: ${{ fromJSON(needs.set-up-single-test.outputs.github_timeout) }} # make sure this is larger than the test timeout in the Makefile
         run: make functional-test-coverage
 
+      - name: Flaky Functional Test Detection
+        if: ${{ (env.MODIFIED_TEST_SUITES != '') && (inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
+        timeout-minutes: ${{ fromJSON(needs.set-up-single-test.outputs.github_timeout) }} # make sure this is larger than the test timeout in the Makefile
+        run: |
+          echo "Detecting flaky functional tests: ${{ needs.set-up-single-test.outputs.modified_integration_test_suites }}"
+          make functional-test-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_test_suites }} -count=5"
+
       - name: Upload test results
         if: ${{ !cancelled() && (inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
         run: make upload-test-results
@@ -314,7 +369,7 @@ jobs:
   functional-test-xdc:
     if: ${{ inputs.run_single_functional_test != true && inputs.run_single_unit_test != true }}
     name: Functional test xdc
-    needs: misc-checks
+    needs: [misc-checks, set-up-single-test]
     strategy:
       fail-fast: false
       matrix:
@@ -375,6 +430,13 @@ jobs:
         timeout-minutes: 40   # update this to TEST_TIMEOUT+5 if you update the Makefile
         run: make functional-test-xdc-coverage
 
+      - name: Flaky Functional XDC Test Detection
+        if: ${{ env.MODIFIED_TEST_SUITES != '' }}
+        timeout-minutes: 60
+        run: |
+          echo "Detecting flaky functional xdc tests: ${{ needs.set-up-single-test.outputs.modified_functional_xdc_test_suites }}"
+          make functional-test-xdc-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_xdc_test_suites }} -count=5"
+
       - name: Upload test results
         if: ${{ !cancelled() }}
         run: make upload-test-results
@@ -382,7 +444,7 @@ jobs:
   functional-test-ndc:
     if: ${{ inputs.run_single_functional_test != true && inputs.run_single_unit_test != true }}
     name: Functional test ndc
-    needs: misc-checks
+    needs: [misc-checks, set-up-single-test]
     strategy:
       fail-fast: false
       matrix:
@@ -443,6 +505,13 @@ jobs:
       - name: Run functional test ndc
         timeout-minutes: 15
         run: make functional-test-ndc-coverage
+
+      - name: Flaky Functional NDC Test Detection
+        if: ${{ env.MODIFIED_TEST_SUITES != '' }}
+        timeout-minutes: 30
+        run: |
+          echo "Detecting flaky functional ndc tests: ${{ needs.set-up-single-test.outputs.modified_functional_ndc_test_suites }}"
+          make functional-test-ndc-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_ndc_test_suites }} -count=5"
 
   test-status:
     if: always()
