--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -204,12 +204,14 @@ jobs:
           cache: false  # do our own caching
 
       - name: Restore dependencies
+        if: ${{ !inputs.run_single_functional_test && !inputs.run_single_unit_test }}
         uses: actions/cache/restore@v4
         with:
           path: ~/go/pkg/mod
           key: go-${{ runner.os }}${{ runner.arch }}-deps-${{ hashFiles('go.sum') }}
 
       - name: Restore build outputs
+        if: ${{ !inputs.run_single_functional_test && !inputs.run_single_unit_test }}
         uses: actions/cache/restore@v4
         with:
           path: ~/.cache/go-build
@@ -632,6 +634,7 @@ jobs:
     if: always()
     name: Test Status
     needs:
+      - misc-checks
       - unit-test
       - integration-test
       - functional-test
