--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -183,12 +183,8 @@ jobs:
     runs-on: ${{ matrix.runs-on }}
     env:
       BUILDKITE_MESSAGE: '{"job": "unit-test"}'
-      # Used by the Makefile to construct the go test command arguments.
-      TEST_ARGS: ${{ needs.set-up-single-test.outputs.single_test_args }}
-      # Note the use of the singular form here, it is converted into UNIT_TEST_DIRS below, which is used by the
-      # Makefile. This is done intentionally to avoid setting UNIT_TEST_DIRS to an empty string.
-      UNIT_TEST_DIR: ${{ inputs.unit_test_directory }}
       TEST_TIMEOUT: ${{ needs.set-up-single-test.outputs.test_timeout }}
+      # TODO: This doesn't seem to do anything
       RUN_SINGLE_UNIT_TEST: ${{ inputs.run_single_unit_test }}
     steps:
       - uses: actions/checkout@v4
@@ -202,21 +198,16 @@ jobs:
           check-latest: true
 
       - name: Run unit tests
-        if: ${{ !cancelled() && !inputs.run_single_unit_test }}
         timeout-minutes: 15
-        run: make unit-test-coverage
-
-      - name: Run single unit test
-        if: ${{ !cancelled() && inputs.run_single_unit_test }}
-        timeout-minutes: 15
-        run: UNIT_TEST_DIRS=$UNIT_TEST_DIR make unit-test-coverage
+        run: make unit-test-coverage UNIT_TEST_DIRS="${{ inputs.unit_test_directory }}" TEST_ARGS="${{ needs.set-up-single-test.outputs.single_test_args }}"
 
       - name: Flaky Unit Test Detection
         if: ${{ !cancelled() && !inputs.run_single_unit_test && env.MODIFIED_TEST_SUITES != '' }}
         timeout-minutes: 30
+        # Not retrying failed tests intentionally here since we're trying to detect flakes.
         run: |
           echo "Detecting flaky unit tests: ${{ needs.set-up-single-test.outputs.modified_unit_test_suites }}"
-          make unit-test TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_unit_test_suites }} -count=10"
+          make unit-test FAILED_TEST_RETRIES=0 TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_unit_test_suites }} -count=10"
 
       - name: Upload test results
         if: ${{ !cancelled() }}
@@ -261,9 +252,10 @@ jobs:
       - name: Flaky Integration Test Detection
         if: ${{ env.MODIFIED_TEST_SUITES != '' }}
         timeout-minutes: 30
+        # Not retrying failed tests intentionally here since we're trying to detect flakes.
         run: |
           echo "Detecting flaky integration tests: ${{ needs.set-up-single-test.outputs.modified_integration_test_suites }}"
-          make integration-test-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_integration_test_suites }} -count=5"
+          make integration-test-coverage FAILED_TEST_RETRIES=0 TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_integration_test_suites }} -count=5"
       - name: Upload test results
         if: ${{ !cancelled() }}
         run: make upload-test-results
@@ -322,12 +314,11 @@ jobs:
       TEST_SHARD_INDEX: ${{ matrix.shard_index }}
       PERSISTENCE_TYPE: ${{ matrix.persistence_type }}
       PERSISTENCE_DRIVER: ${{ matrix.persistence_driver }}
-      SINGLE_TEST_ARGS: ${{ needs.set-up-single-test.outputs.single_test_args }}
       TEST_TIMEOUT: ${{ needs.set-up-single-test.outputs.test_timeout }}
       BUILDKITE_MESSAGE: '{"job": "functional-test", "db": "${{ matrix.persistence_driver }}"}'
     steps:
       - name: Print functional test
-        run: echo "${{ needs.set-up-single-test.outputs.dbs }}" && echo "$SINGLE_TEST_ARGS"
+        run: echo "${{ needs.set-up-single-test.outputs.dbs }}" && echo "${{ needs.set-up-single-test.outputs.single_test_args }}"
       - uses: ScribeMD/docker-cache@0.3.7
         if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         with:
@@ -356,14 +347,15 @@ jobs:
       - name: Run functional test
         if: ${{ inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER)) }}
         timeout-minutes: ${{ fromJSON(needs.set-up-single-test.outputs.github_timeout) }} # make sure this is larger than the test timeout in the Makefile
-        run: make functional-test-coverage
+        run: make functional-test-coverage TEST_ARGS="${{ needs.set-up-single-test.outputs.single_test_args }}"
 
       - name: Flaky Functional Test Detection
         if: ${{ (env.MODIFIED_TEST_SUITES != '') && (inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
         timeout-minutes: ${{ fromJSON(needs.set-up-single-test.outputs.github_timeout) }} # make sure this is larger than the test timeout in the Makefile
+        # Not retrying failed tests intentionally here since we're trying to detect flakes.
         run: |
           echo "Detecting flaky functional tests: ${{ needs.set-up-single-test.outputs.modified_integration_test_suites }}"
-          make functional-test-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_test_suites }} -count=5"
+          make functional-test-coverage FAILED_TEST_RETRIES=0 TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_test_suites }} -count=5"
 
       - name: Upload test results
         if: ${{ !cancelled() && (inputs.run_single_functional_test != true || (inputs.run_single_functional_test == true && contains(fromJSON(needs.set-up-single-test.outputs.dbs), env.PERSISTENCE_DRIVER))) }}
@@ -436,9 +428,10 @@ jobs:
       - name: Flaky Functional XDC Test Detection
         if: ${{ env.MODIFIED_TEST_SUITES != '' }}
         timeout-minutes: 60
+        # Not retrying failed tests intentionally here since we're trying to detect flakes.
         run: |
           echo "Detecting flaky functional xdc tests: ${{ needs.set-up-single-test.outputs.modified_functional_xdc_test_suites }}"
-          make functional-test-xdc-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_xdc_test_suites }} -count=5"
+          make functional-test-xdc-coverage FAILED_TEST_RETRIES=0 TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_xdc_test_suites }} -count=5"
 
       - name: Upload test results
         if: ${{ !cancelled() }}
@@ -512,9 +505,10 @@ jobs:
       - name: Flaky Functional NDC Test Detection
         if: ${{ env.MODIFIED_TEST_SUITES != '' }}
         timeout-minutes: 30
+        # Not retrying failed tests intentionally here since we're trying to detect flakes.
         run: |
           echo "Detecting flaky functional ndc tests: ${{ needs.set-up-single-test.outputs.modified_functional_ndc_test_suites }}"
-          make functional-test-ndc-coverage TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_ndc_test_suites }} -count=5"
+          make functional-test-ndc-coverage FAILED_TEST_RETRIES=0 TEST_ARGS="-run=${{ needs.set-up-single-test.outputs.modified_functional_ndc_test_suites }} -count=5"
 
   test-status:
     if: always()
