Skip altered test detection if in main (#6669)
## What changed?
<!-- Describe what has changed in this PR -->
Skip altered test detection if no PR is associated with the run

## Why?
<!-- Tell your future self why have you made these changes -->
No need to check for altered test without a PR context

## How did you test it?
<!-- How have you verified this change? Tested locally? Added a unit
test? Checked in staging env? -->

## Potential risks
<!-- Assuming the worst case, what can be broken when deploying this
change to production? -->

## Documentation
<!-- Have you made sure this change doesn't falsify anything currently
stated in `docs/`? If significant
new behavior is added, have you described that in `docs/`? -->

## Is hotfix candidate?
<!-- Is this PR a hotfix candidate or does it require a notification to
be sent to the broader community? (Yes/No) -->

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -116,13 +116,11 @@ jobs:
         run: git fetch origin ${{ github.event.pull_request.base.ref }}:${{ github.event.pull_request.base.ref }}
 
       - name: Compute merge base
+        if: ${{ github.event_name == 'pull_request' }}
         run: |
           MERGE_BASE="$(git merge-base "${{ env.COMMIT }}" "${{ github.event.pull_request.base.ref }}")"
           echo "MERGE_BASE=${MERGE_BASE}" >> "$GITHUB_ENV"
 
-      - name: Collect Modified Tests
-        id: collect_modified_tests
-        run: |
           set -exuo pipefail
 
           go run ./cmd/tools/test/find_altered_tests.go \
