Only upload junit XML files
There are many large coverage files which we want to exclude when
retrieving multiple artifacts in order to access junit XMLs:

$ gh run download 11404810538 --repo temporalio/temporal --dir .

3.7M    ./junit-xml--11404810538--1--postgres12_pgx--functional-test-xdc/90b64926828a35a7fa7d0abe4e47fb81.cover.out
...30 like this...
3.6M    ./junit-xml--11404810538--1--cass_es--functional-test-ndc/1489124e0ff5f88db39decd3857743e3.cover.out
3.3M    ./junit-xml--11404810538--1--unit-test/e79e1deb24d801f1386c6d15fa8aa9b8.cover.out
2.9M    ./junit-xml--11404810538--1--integration-test/ec6be7e1fa51451d8af37c9645ed1ec2.cover.out
884K    ./junit-xml--11404810538--1--unit-test/9721157f8b693ef10498237f1c2a6815.junit.xml
412K    ./junit-xml--11404810538--1--integration-test/832a9ed3484a3b633106f01aac17822a.junit.xml
272K    ./junit-xml--11404810538--1--ubuntu-20.04--cass_es8--2--functional-test/80d320ae0fb05f84e633c54af2f222f7.junit.xml
260K    ./junit-xml--11404810538--1--postgres12_pgx--functional-test-xdc/49b18d5cb0cf6427a3c5cd645ac3ab8c.junit.xml

However, there are also a few very large junit XMLs, in which complete
logging output has been captured in the <failure message="Failed"
type=""> field.

8.4M    ./junit-xml--11404810538--1--ubuntu-20.04--sqlite--2--functional-test/053f83e6a8000b581a749edd016398ba.junit.xml

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -268,7 +268,7 @@ jobs:
         if: ${{ !cancelled() && !inputs.run_single_unit_test }}
         with:
           name: junit-xml--${{github.run_id}}--${{github.run_attempt}}--unit-test
-          path: .testoutput
+          path: .testoutput/**/*.junit.xml
           retention-days: 14
           include-hidden-files: true
 
@@ -336,7 +336,7 @@ jobs:
         if: ${{ !cancelled() }}
         with:
           name: junit-xml--${{github.run_id}}--${{github.run_attempt}}--integration-test
-          path: .testoutput
+          path: .testoutput/**/*.junit.xml
           retention-days: 14
           include-hidden-files: true
 
@@ -458,7 +458,7 @@ jobs:
         if: ${{ !cancelled() && !inputs.run_single_functional_test }}
         with:
           name: junit-xml--${{github.run_id}}--${{github.run_attempt}}--${{matrix.runs-on}}--${{matrix.name}}--${{matrix.shard_index}}--functional-test
-          path: .testoutput
+          path: .testoutput/**/*.junit.xml
           retention-days: 14
           include-hidden-files: true
 
@@ -554,7 +554,7 @@ jobs:
         if: ${{ !cancelled() }}
         with:
           name: junit-xml--${{github.run_id}}--${{github.run_attempt}}--${{matrix.name}}--functional-test-xdc
-          path: .testoutput
+          path: .testoutput/**/*.junit.xml
           retention-days: 14
           include-hidden-files: true
 
@@ -651,7 +651,7 @@ jobs:
         if: ${{ !cancelled() }}
         with:
           name: junit-xml--${{github.run_id}}--${{github.run_attempt}}--${{matrix.name}}--functional-test-ndc
-          path: .testoutput
+          path: .testoutput/**/*.junit.xml
           retention-days: 14
           include-hidden-files: true
 
